# azure-event-hubs

./: !  .gitignore  .gitmodules  CMakeLists.txt  readme.md  release.cmd
c/: CMakeLists.txt  README.md  notice.txt  readme.md  thirdpartynotice.txt
c/build_all/linux/: build.sh  build_proton.sh  setup.sh
c/build_all/mbed/: build.cmd  build_proton.cmd
c/build_all/windows/: build.cmd  build_proton.cmd  build_proton_x64.cmd
c/common/: CMakeLists.txt
c/common/adapters/: httpapi_curl.c  httpapi_mbed.cpp  httpapi_winhttp.c  httpapi_wininet.c  httpapi_wininet_ce6.c  lock_c11.c  lock_pthreads.c  lock_rtx_mbed.cpp  threadapi_c11.c  threadapi_pthreads.c  threadapi_rtx_mbed.cpp  threadapi_win32.c
c/common/doc/: buffer_requirements.docm  strings_requirements.docm
c/common/inc/: base64.h  buffer_.h  crt_abstractions.h  doublylinkedlist.h  gballoc.h  httpapi.h  httpheaders.h  iot_logging.h  lock.h  macro_utils.h  map.h  string_tokenizer.h  strings.h  threadapi.h  urlencode.h  vector.h
c/common/src/: base64.c  buffer.c  crt_abstractions.c  doublylinkedlist.c  gballoc.c  httpheaders.c  map.c  string_tokenizer.c  strings.c  urlencode.c  vector.c
c/common/tools/macro_utils_h_generator/: macro_utils.cs  macro_utils.tt  macro_utils_h_generator.sln  program.cs
c/common/unittests/: makefile.linux
c/common/unittests/buffer_unittests/: buffer_unittests.cpp  buffer_unittests.vcxproj  main.c  makefile.linux
c/common/unittests/crtabstractions_unittests/: crtabstractions_unittests.cpp  crtabstractions_unittests.vcxproj  main.c  makefile.linux
c/common/unittests/doublylinkedlist_unittests/: doublylinkedlist_unittests.cpp  doublylinkedlist_unittests.vcxproj  main.c  makefile.linux  sources  sources.ce800
c/common/unittests/gballoc_unittests/: gballoc_unittests.cpp  gballoc_unittests.vcxproj  main.c  makefile.linux
c/common/unittests/gballoc_without_init_unittests/: gballoc_undertest.c  gballoc_without_init_unittests.cpp  gballoc_without_init_unittests.vcxproj  main.c
c/common/unittests/httpheaders_unittests/: httpheaders_unittests.cpp  httpheaders_unittests.vcxproj  main.c  makefile.linux  sources.ce800
c/common/unittests/lock_unittests/: lock_unittests.cpp  lock_unittests.vcxproj  main.c  makefile.linux
c/common/unittests/map_unittests/: main.c  makefile.linux  map_unittests.cpp  map_unittests.vcxproj  sources  sources.ce800
c/common/unittests/string_tokenizer_unittests/: main.c  makefile.linux  string_tokenizer_unittests.cpp  string_tokenizer_unittests.vcxproj  string_tokenizer_unittests.vcxproj.filters
c/common/unittests/strings_unittests/: main.c  makefile.linux  strings_unittests.cpp  strings_unittests.vcxproj
c/common/unittests/urlencode_unittests/: main.c  makefile.linux  urlencode_unittests.cpp  urlencode_unittests.vcxproj
c/common/unittests/vector_unittests/: main.c  makefile.linux  sources.ce800  vector_unittests.cpp  vector_unittests.vcxproj
c/docs/: beagleboneblack_debian_setup.md  create_event_hub.md  desktop_fedora_setup.md  desktop_ubuntu_setup.md  eventhubclient_app_from_scratch.md  how_to_port_the_c_libraries_to_other_platforms.md  mbed_setup.md  raspberrypi_raspbian_setup.md  windows_setup.md
c/eventhub_client/: CMakeLists.txt
c/eventhub_client/devdoc/: eventhubclient_design.vsdx
c/eventhub_client/devdoc/requirement_docs/: connectionstringparser_requirements.docm  connectionstringparser_requirements.md  eventdata_requirements.docm  eventdata_requirements.md  eventhubclient_ll_requirements.docm  eventhubclient_ll_requirements.md  eventhubclient_requirements.docm  eventhubclient_requirements.md  eventhubreceiver_requirements.md  eventhubreceiver_requirements_ll.md
c/eventhub_client/doc/: eventhubclient_c_library.docx
c/eventhub_client/doc/requirement_docs/: eventdata_requirements.docm  eventhubclient_ll_requirements.docm  eventhubclient_requirements.docm
c/eventhub_client/inc/: connection_string_parser.h  eventdata.h  eventhubclient.h  eventhubclient_ll.h  eventhubreceiver.h  eventhubreceiver_ll.h  version.h
c/eventhub_client/samples/: CMakeLists.txt
c/eventhub_client/samples/receive/: CMakeLists.txt  readme.md  receive.c  receive.h
c/eventhub_client/samples/send/: CMakeLists.txt  main.c  send.c  send.h
c/eventhub_client/samples/send_batch/: CMakeLists.txt  main.c  send_batch.c  send_batch.h
c/eventhub_client/samples/sendasync/: CMakeLists.txt  sendasync.c  sendasync.h
c/eventhub_client/samples/serialization_oss_lib/: send.c
c/eventhub_client/samples/ubuntu-snappy/: Makefile  README.md  example-conf.yaml
c/eventhub_client/src/: connection_string_parser.c  eventdata.c  eventhubclient.c  eventhubclient_ll.c  eventhubreceiver.c  eventhubreceiver_ll.c  version.c
c/eventhub_client/tests/: CMakeLists.txt
c/eventhub_client/tests/connectionparser_unittests/: CMakeLists.txt  main.c
c/eventhub_client/tests/connectionstringparser_unittests/: CMakeLists.txt  connectionstringparser_unittests.cpp
c/eventhub_client/tests/eventdata_unittests/: CMakeLists.txt  eventdata_unittests.cpp  eventdata_unittests.vcxproj.filters  main.c  makefile.linux
c/eventhub_client/tests/eventhubclient_e2etests/: CMakeLists.txt  eventhubclient_e2etests.cpp  eventhubclient_e2etests.vcxproj  main.c
c/eventhub_client/tests/eventhubclient_ll_unittests/: CMakeLists.txt  eventhubclient_ll_unittests.cpp  eventhubclient_ll_unittests.vcxproj  main.c
c/eventhub_client/tests/eventhubclient_unittests/: CMakeLists.txt  eventhubclient_unittests.cpp  eventhubclient_unittests.vcxproj  main.c
c/eventhub_client/tests/eventhubreceiver_ll_unittests/: CMakeLists.txt  eventhubreceiver_ll_unittests.c  main.c
c/eventhub_client/unittests/: CMakeLists.txt  makefile.linux
c/testtools/: CMakeLists.txt
c/testtools/ctest/: CMakeLists.txt
c/testtools/eventhub_test/: CMakeLists.txt
c/testtools/micromock/: CMakeLists.txt
c/testtools/sal/inc/: sal.h  (+1 more)
c/testtools/unittests_props/: unittestsproject.props
c/tools/compilembed/: compilembed.sln  mbedonlinecompile.cs  program.cs
c/tools/csharp_consumeeventsfromeventhub/: csharp_consumeeventsfromeventhub.sln  readme.md
(+803 files in other folders)
